--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
 	"name": "log-o-matic",
 	"publisher": "tobin",
-	"displayName": "log-o-matic",
+	"displayName": "log-o-matic 9000",
 	"description": "Debug.Log() tool to make your life easier",
 	"version": "0.0.1",
+	"icon": "logo.png",
 	"engines": {
 		"vscode": "^1.40.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/tobinP/log-o-matic"
 	},
 	"categories": [
 		"Other"
