--- a/package.json
+++ b/package.json
@@ -31,6 +31,16 @@
 		"keybindings": {
 			"command": "extension.log",
 			"key": "alt+l"
+		},
+		"configuration": {
+			"title": "Log-o-matic",
+			"properties": {
+				"log-o-matic.useDebug": {
+					"type": "boolean",
+					"default": false,
+					"description": "Use `Debug.WriteLine()` instead of `Console.WriteLine()`"
+				}
+			}
 		}
 	},
 	"scripts": {
@@ -43,12 +53,12 @@
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^5.2.7",
-		"@types/node": "^12.11.7",
+		"@types/node": "^12.20.55",
 		"@types/vscode": "^1.40.0",
 		"glob": "^7.1.5",
 		"mocha": "^6.2.2",
-		"typescript": "^3.6.4",
 		"tslint": "^5.20.0",
+		"typescript": "^3.6.4",
 		"vscode-test": "^1.2.2"
 	}
 }
